Bug 41245 - FILEOPEN: auto fit text VIEWING too small in PPT
Summary: FILEOPEN: auto fit text VIEWING too small in PPT
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.3 release
Hardware: All All
: medium normal
Assignee: Arnaud Versini
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-27 00:37 UTC by Arnaud Versini
Modified: 2015-08-28 10:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Powerpoint rendering (4.30 KB, application/pdf)
2011-09-27 00:37 UTC, Arnaud Versini
Details
Powerpoint file doesn't load correctly (25.00 KB, application/vnd.ms-powerpoint)
2011-09-27 00:38 UTC, Arnaud Versini
Details
LibO rendering (15.98 KB, application/pdf)
2011-09-27 00:39 UTC, Arnaud Versini
Details
Proposed patch (1.33 KB, patch)
2011-10-25 13:14 UTC, Arnaud Versini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2011-09-27 00:37:44 UTC
Created attachment 51652 [details]
Powerpoint rendering

Step to reproduce :
- Create a new file using PowerPoint
- Add text to a normal diapo and reduce the text box, desactivate the autofit text option
- Save the file and load it under LibreOffice
Comment 1 Arnaud Versini 2011-09-27 00:38:38 UTC
Created attachment 51653 [details]
Powerpoint file doesn't load correctly
Comment 2 Arnaud Versini 2011-09-27 00:39:01 UTC
Created attachment 51654 [details]
LibO rendering
Comment 3 Rainer Bielefeld Retired 2011-09-27 01:44:32 UTC
[Reproducible] with reporters sample "ppt_filter_problem.ppt" and "LibreOffice 3.4.3 RC2 - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:302)]" and with "LibreOffice Portable 3.3.3  - WIN7  Home Premium (64bit) German UI [OOO330m19 (Build:301  Tag 3.3.3.1)]".

a) Minor problem: Bullet shown in front of the last line, not in front of the first line (might have same roots as "b"). This problem is solved for Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID: 81607ad-3dca5fd-da627d2)]".
b) Main problem: text size much to small (see my attached screenshots41245.pdf)

OOo 3.1.1 and OOo 3.3 open "ppt_filter_problem.ppt" without that problem and show page correctly like MS Powerpoint Viewer. 

Strange, when I open "ppt_filter_problem.ppt" with OOo 3.3 and save it as "ppt_filter_problem.odp" LibO 3.4.3 will show text correctly.

@Radek:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 4 Arnaud Versini 2011-09-27 02:02:57 UTC
@Rainer : I think the "adapt to the text automatically" is not available in OpenOffice.org, whith this functionality, the import doesn't work correctly because now this is the default behavior (I don't know which version introduce this functionality) and the real text box option is not loaded.
Comment 5 Arnaud Versini 2011-10-23 05:41:07 UTC
I'm on it, ok Radek? Can I change the assignement?
Comment 6 Arnaud Versini 2011-10-25 13:14:49 UTC
Created attachment 52761 [details]
Proposed patch
Comment 7 Thorsten Behrens (allotropia) 2011-11-01 03:28:34 UTC
Fixes pushed to master and -3-4 branch (too late for 3.4.4 though it seems)
Comment 8 Petr Mladek 2011-11-01 07:05:22 UTC
We have managed to get it into 3.4.4-rc2.
Comment 9 Björn Michaelsen 2011-12-23 13:25:39 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.