Fix fdo#41245 : Auto fit text VIEWING too small in PPT